--- a/app/src/main/res/drawable/ic_launcher_foreground.xml
+++ b/app/src/main/res/drawable/ic_launcher_foreground.xml
@@ -9,43 +9,43 @@
       android:translateY="25.6">
     <path
         android:pathData="M40.5,20C29.5,20 20,31 20,39.5C20,50 20,83.5 20,90C20,101.5 28.5,110.5 40.5,110.5C48,110.5 84,110.5 90,110.5C101,110.5 109.5,100 109.5,90"
-        android:strokeWidth="4"
+        android:strokeWidth="8"
         android:fillColor="#00000000"
         android:strokeColor="#52443D"
         android:strokeLineCap="round"/>
     <path
         android:pathData="M33,40H48"
-        android:strokeWidth="2"
+        android:strokeWidth="4"
         android:fillColor="#00000000"
         android:strokeColor="#52443D"
         android:strokeLineCap="round"/>
     <path
         android:pathData="M33,55H48"
-        android:strokeWidth="2"
+        android:strokeWidth="4"
         android:fillColor="#00000000"
         android:strokeColor="#52443D"
         android:strokeLineCap="round"/>
     <path
         android:pathData="M33,70H60"
-        android:strokeWidth="2"
+        android:strokeWidth="4"
         android:fillColor="#00000000"
         android:strokeColor="#52443D"
         android:strokeLineCap="round"/>
     <path
         android:pathData="M33,85H60"
-        android:strokeWidth="2"
+        android:strokeWidth="4"
         android:fillColor="#00000000"
         android:strokeColor="#52443D"
         android:strokeLineCap="round"/>
     <path
-        android:pathData="M100,16C85.5,16 85.5,39 84,50.5C82.5,62 75.5,100.5 62.5,119.5C58.5,124 55,124 51,119.5L50,118"
-        android:strokeWidth="4"
+        android:pathData="M100,16C85.5,16 85.5,39 84,50.5C82.5,62 65,115.5 62.5,119.5C60,123.5 59.5,123 59.5,123"
+        android:strokeWidth="8"
         android:fillColor="#00000000"
         android:strokeColor="#A14000"
         android:strokeLineCap="round"/>
     <path
         android:pathData="M66,47H102"
-        android:strokeWidth="4"
+        android:strokeWidth="8"
         android:fillColor="#00000000"
         android:strokeColor="#A14000"
         android:strokeLineCap="round"/>
